[iOS] Rotating PDF in Safari scrolls to the wrong position https://bugs.webkit.org/show_bug.cgi?id=143259 <rdar://problem/19872693>

Reviewed by Dan Bernstein.

* UIProcess/ios/WKPDFView.mm:
(-[WKPDFView web_setMinimumSize:]):
Maintan the relative top/left within the rescaled document.


Canonical link: https://commits.webkit.org/161302@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182202 268f45cc-cd09-0410-ab3c-d52691b4dbfc